--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+Version 1.3:
+- Checking for existing of name before delete process
+- list checks for argument again
+
 Version 1.2:
 - IdentityKey and Port conflicts solved
 
